--- a/src/components/Board/Board.module.css
+++ b/src/components/Board/Board.module.css
@@ -1,5 +1,6 @@
 /* Container som håller samman board_header och column_container  */
 
+
 .board {
   width: 100%;
   height: 99%;
@@ -9,7 +10,8 @@
   border-radius: 0;
   justify-content: center;
   gap: 8px;
-  /* background-color: #dbdbdb; */
+  overflow-x: scroll;
+  max-height: 100%;
 }
 
 /* Container som håller Board-title och Add-Column input+knapp */
@@ -30,7 +32,7 @@
 .column_container {
   display: flex;
   flex-grow: 1;
-  max-height: 100%;
+  height: calc(100vh - 62px)
 }
 
 /* Input-fält för att skriva namn på ny kolumn */
