--- a/src/components/Column/Column.module.css
+++ b/src/components/Column/Column.module.css
@@ -4,12 +4,12 @@
   background-color: #202020dc;
   backdrop-filter: blur(4px);
   border-radius: 5px;
-  max-height: 100%;
+  /* TESTING MAX HEIGHT */
+  max-height: calc(100vh - 118px);
   height: fit-content;
   transition: height 0.5s;
   margin-left: 11px;
   margin-top: 50px;
-  /* gap: 1rem; */
   min-width: 250px;
   max-width: 250px;
   position: relative;
