--- a/src/components/UserPage/UserList.module.css
+++ b/src/components/UserPage/UserList.module.css
@@ -16,6 +16,7 @@
   border-radius: 5px;
   background-color: #202020ec;
   margin-top: 8px;
+  backdrop-filter: blur(3px);
 }
 
 .img {
